Fixed navigation missing on small devices

--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -431,8 +431,21 @@ footer {
     margin:0;
   }
 
-  nav, nav2 {
+  nav {
     display: none;
+  }
+  nav2 {
+    display: block;
+    width: auto;
+    height: auto;
+    position: relative;
+    margin: 10px;
+    padding: 10px;
+    top:auto;
+    bottom:auto;
+    left:auto;
+    right:auto;
+    max-width: 600px;
   }
 
   header, section, footer {
